syntax = "proto3";

package AgentGameProto;

enum MessageID
{
	UNDEFINE = 0;
	JoinGameRequestID = 0XFF01;
	JoinGameReplyID = 0XFF02;

	LeaveGameRequestID = 0XFF03;
	LeaveGameReplyID = 0XFF04;
}

message JoinGameRequest
{
	int64 UserId = 1;
	string NickName = 2;
}

message JoinGameReply
{
	
}

message LeaveGameRequest
{
	int64 UserId = 1;
}

message LeaveGameReply
{
	
}